--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "update-linters",
+  "name": "@venturalp/update-linters",
   "version": "0.0.1",
   "author": "Guilherme Ventura de Souza",
   "license": "MIT",
@@ -37,7 +37,8 @@
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "yargs": "^15.1.0"
   },
   "browser": {
     "child_process": false,
