--- a/package.json
+++ b/package.json
@@ -21,24 +21,19 @@
     "cra"
   ],
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.7.2",
-    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-flowtype": "^4.5.2",
-    "eslint-plugin-flowtype-errors": "^4.1.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-unused-imports": "^0.1.2",
     "np": "^6.2.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "yargs": "^15.1.0"
+    "webpack-cli": "^3.3.11"
   },
   "browser": {
     "child_process": false,
@@ -47,5 +42,9 @@
   "files": [
     "lib",
     "src"
-  ]
+  ],
+  "dependencies": {
+    "ncp": "^2.0.0",
+    "yargs": "^15.1.0"
+  }
 }
