--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-unused-imports": "^0.1.2",
     "np": "^6.2.0",
     "prettier": "^1.19.1",
+    "prettier-eslint-cli": "^5.0.0",
     "rimraf": "^3.0.2",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
