--- a/src/files/package.json
+++ b/src/files/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/venturalp/bring-my-beer#readme",
   "devDependencies": {
+    "prettier-eslint-cli": "^5.0.0",
     "@babel/core": "^7.7.5",
     "@babel/plugin-transform-runtime": "^7.7.6",
     "@babel/preset-env": "^7.7.6",
