--- a/src/files/package.json
+++ b/src/files/package.json
@@ -27,18 +27,12 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "@babel/register": "^7.7.4",
-    "@svgr/webpack": "^4.3.3",
-    "@types/jest": "^24.9.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-register": "^6.26.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.3",
     "eslint": "^6.7.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.7.0",
@@ -49,29 +43,17 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-unused-imports": "^0.1.2",
     "file-loader": "^5.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "html-webpack-template": "^6.2.0",
     "intl": "^1.2.5",
     "jest": "^24.9.0",
     "jest-styled-components": "^7.0.0",
     "path": "^0.12.7",
-    "prettier": "^1.19.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "prettier": "^1.19.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.7.6",
     "es6-promise": "^4.2.8",
-    "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.17.15",
-    "polished": "^3.4.2",
     "react": "^16.12.0",
-    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
     "styled-components": "^4.4.1",
     "svg-loaders-react": "^2.2.1"
   }
