--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "clean": "rimraf lib && rimraf dist",
     "build": "rimraf lib && webpack --mode production && rimraf dist",
-    "prepublish": "yarn clean && yarn build && rimraf dist"
+    "prepublish": "yarn clean && yarn build && rimraf dist",
+    "version": "npx conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
   "repository": {
     "type": "git",
