--- a/src/files/package.json
+++ b/src/files/package.json
@@ -21,37 +21,33 @@
   },
   "homepage": "https://github.com/venturalp/bring-my-beer#readme",
   "devDependencies": {
-    "prettier-eslint-cli": "^5.0.0",
-    "@babel/core": "^7.7.5",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/register": "^7.7.4",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^25.1.0",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/register": "^7.8.6",
     "babel-loader": "^8.0.6",
-    "babel-plugin-styled-components": "^1.10.6",
+    "babel-plugin-styled-components": "^1.10.7",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-register": "^6.26.0",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "eslint-plugin-unused-imports": "^0.1.2",
-    "file-loader": "^5.0.2",
+    "file-loader": "^5.1.0",
     "intl": "^1.2.5",
-    "jest": "^24.9.0",
     "jest-styled-components": "^7.0.0",
     "path": "^0.12.7",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "prettier-eslint-cli": "^5.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.7.6",
-    "es6-promise": "^4.2.8",
     "react": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "styled-components": "^4.4.1",
