--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean": "rimraf lib && rimraf dist",
     "build": "rimraf lib && webpack --mode production && rimraf dist",
     "prepublish": "yarn clean && yarn build && rimraf dist",
-    "version": "npx conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
+    "version": "npx conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
+    "test": "echo \"Error: no tests specified yet\" && exit 1"
   },
   "repository": {
     "type": "git",
