fix(TestScript): Echo to test script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "rimraf lib && webpack --mode production && rimraf dist",
     "prepublish": "yarn clean && yarn build && rimraf dist",
     "version": "npx conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
-    "test": "echo \"Error: no tests specified yet\""
+    "test": "echo \"Error: no tests specified yet\"",
+    "publish": "npm publish --access public"
   },
   "repository": {
     "type": "git",
