--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "publish": "npm publish --access public",
     "release": "np --any-branch"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/venturalp/update-linters.git"
