--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   ],
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "conventional-changelog": "^3.1.18",
+    "conventional-changelog-cli": "^3.1.18",
     "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
