--- a/lib/files/package.json
+++ b/lib/files/package.json
@@ -1,4 +1,25 @@
 {
+  "name": "bring-my-beer",
+  "version": "1.0.0",
+  "description": "Bring My Beer was made using my Boilerplate for ReactProjects (https://gitlab.com/venturalp/reactboilerplate)",
+  "main": "webpack.config.js",
+  "scripts": {
+    "test": "jest",
+    "build:dev": "export NODE_ENV=development && webpack --mode development --progress --inline --color",
+    "start:prd": "export NODE_ENV=production && webpack --mode production --progress --inline --color && webpack-dev-server --mode production --open",
+    "build": "export NODE_ENV=production && webpack --mode production --progress --inline --color",
+    "start": "export NODE_ENV=development && webpack --mode development --progress --inline --color && webpack-dev-server --mode development --open"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/venturalp/bring-my-beer"
+  },
+  "author": "Guilherme Ventura de Souza",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/venturalp/bring-my-beer/issues"
+  },
+  "homepage": "https://github.com/venturalp/bring-my-beer#readme",
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@babel/plugin-transform-runtime": "^7.8.3",
@@ -24,5 +45,12 @@
     "path": "^0.12.7",
     "prettier": "^1.19.1",
     "prettier-eslint-cli": "^5.0.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.7.6",
+    "react": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "styled-components": "^4.4.1",
+    "svg-loaders-react": "^2.2.1"
   }
 }
