--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "release": "np --any-branch"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
