feat(Package|Webpack): Try to fix running problems/webpack

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,5 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/flow"],
-  "plugins": [
-    "@babel/plugin-transform-runtime",
-    "transform-class-properties",
-    "babel-plugin-styled-components"
-  ]
+  "presets": ["@babel/preset-env"],
+  "plugins": ["@babel/plugin-transform-runtime"],
+  "sourceType": "unambiguous"
 }
