--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "url": "https://github.com/venturalp"
   },
   "main": "./lib/index.js",
-  "bin": {
-    "@venturalp/update-linters": ".bin/index.js"
-  },
+  "bin": "./lib/index.js",
   "scripts": {
     "clean": "rimraf lib",
-    "build": "webpack --mode production",
+    "build": "cpy --dot src/files lib/files && babel src -d lib",
     "prebuild": "yarn clean",
     "prepublishOnly": "yarn build",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
@@ -38,13 +36,13 @@
     "cra"
   ],
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.7",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.6",
     "conventional-changelog-cli": "^2.0.31",
-    "copy-webpack-plugin": "^5.1.1",
+    "cpy-cli": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.19.1",
@@ -54,9 +52,7 @@
     "np": "^6.2.0",
     "prettier": "^1.19.1",
     "prettier-eslint-cli": "^5.0.0",
-    "rimraf": "^3.0.2",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "rimraf": "^3.0.2"
   },
   "browser": {
     "child_process": false,
