--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "bin": "./lib/index.js",
   "scripts": {
     "clean": "rimraf lib",
-    "build": "cpy --dot src/files lib/files && babel src -d lib",
+    "build": "ncp src lib",
     "prebuild": "yarn clean",
     "prepublishOnly": "yarn build",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
@@ -42,7 +42,6 @@
     "@babel/preset-env": "^7.8.7",
     "babel-eslint": "^10.1.0",
     "conventional-changelog-cli": "^2.0.31",
-    "cpy-cli": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.19.1",
